--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
       </a>
       <a href="#">About</a>
       <a href="#">Experience</a>
-      <a href="#">Project</a>
-      <a href="#">Contact</a>
+      <a href="https://elegant-jalebi-aa081f.netlify.app/">Project</a>
+      <a href="https://drive.google.com/drive/folders/1PJXshwAFOmg4mtz7nSJ49O8Tqjdr6oxR">Ressume</a>
     </nav>
     <!-- Nav bar ends -->
     <div class="head-div left">
       <img src="Images/aarif2.png" alt="" />
     </div>
+
     <div class="head-div right">
       <div class="content">
         <h1 class="name">Hello I'm <span>Md Aarif Raza</span></h1>
@@ -76,11 +77,12 @@
         </div>
       </div>
     </div>
+
   </header>
   <section class="about">
     <h1 class="about-head">About <span>Me</span></h1>
     <div class="ab-text">
-      <div class="text">
+      <div class="text" style="color: black;">
         I'm an undergraduate in B-Tech Computer Science and Engineering from
         <b>Ies College of Technology, Bhopal</b> with current grade
         point of 7.99. Currently I'm working on MERN stack but also want to
