--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <a href="#">About</a>
       <a href="#">Experience</a>
       <a href="https://elegant-jalebi-aa081f.netlify.app/">Project</a>
-      <a href="https://drive.google.com/drive/folders/1PJXshwAFOmg4mtz7nSJ49O8Tqjdr6oxR">Ressume</a>
+      <a href="https://drive.google.com/drive/folders/1PJXshwAFOmg4mtz7nSJ49O8Tqjdr6oxR">Resume</a>
     </nav>
     <!-- Nav bar ends -->
     <div class="head-div left">
