--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
     <!-- Nav bar ends -->
     <div class="head-div left">
-      <img src="Images/aarif2.png" alt="" />
+      <img src="Images/araza.png" alt="" />
     </div>
 
     <div class="head-div right">
